--- a/app/src/main/res/layout/item_timezone.xml
+++ b/app/src/main/res/layout/item_timezone.xml
@@ -44,7 +44,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="泰国"
-            android:textColor="@color/color_A7B2C"
+            android:textColor="@color/color_A7B2C4"
             android:textSize="12sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_city"
