--- a/app/src/main/res/layout/view_bet_record_title_bar.xml
+++ b/app/src/main/res/layout/view_bet_record_title_bar.xml
@@ -17,9 +17,9 @@
         android:layout_marginTop="@dimen/margin_8"
         android:layout_marginEnd="@dimen/margin_10"
         android:drawablePadding="@dimen/margin_6"
-        app:drawableTint="@color/color_A7B2C"
+        app:drawableTint="@color/color_A7B2C4"
         android:text="@string/text_us_east_time"
-        android:textColor="@color/color_A7B2C"
+        android:textColor="@color/color_A7B2C4"
         android:textSize="@dimen/textSize12sp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
