--- a/app/src/main/res/drawable/bg_search_layout.xml
+++ b/app/src/main/res/drawable/bg_search_layout.xml
@@ -2,9 +2,9 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-        <stroke android:width="1dp" android:color="@color/color_404348_EDEDED" />
-        <solid android:color="@color/color_1A1A1A_FFFFFF" />
-        <corners android:radius="18dp" />
-    </shape>
+            <stroke android:width="1dp" android:color="@color/color_EDEDED" />
+            <solid android:color="@color/color_bbbbbb_ffffff" />
+            <corners android:radius="4dp" />
+        </shape>
     </item>
 </selector>
