--- a/app/src/main/res/layout/fragment_bet_record.xml
+++ b/app/src/main/res/layout/fragment_bet_record.xml
@@ -151,9 +151,9 @@
                 android:layout_marginEnd="@dimen/margin_10"
                 android:drawablePadding="@dimen/margin_6"
                 android:text="@string/text_us_east_time"
-                android:textColor="@color/color_A7B2C"
+                android:textColor="@color/color_A7B2C4"
                 android:textSize="@dimen/textSize12sp"
-                app:drawableTint="@color/color_A7B2C"
+                app:drawableTint="@color/color_A7B2C4"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
