--- a/app/src/main/res/layout/item_main_home_menu.xml
+++ b/app/src/main/res/layout/item_main_home_menu.xml
@@ -3,14 +3,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="200dp"
+    android:paddingRight="10dp"
     tools:ignore="ContentDescription, SpUsage">
 
     <ImageView
         android:id="@+id/iv_bg"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_gravity="bottom"
+        android:layout_height="160dp"
         android:adjustViewBounds="true"
-        android:src="@drawable/card_sport_football" />
+        android:src="@drawable/card_sport_home" />
+
+    <ImageView
+        android:id="@+id/iv_people"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="right"
+        android:adjustViewBounds="true"
+        android:src="@drawable/card_sport_esports" />
 
     <LinearLayout
         android:layout_width="match_parent"
