--- a/app/src/main/res/layout/item_search_history.xml
+++ b/app/src/main/res/layout/item_search_history.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/tvHistory"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:paddingVertical="10dp"
+    android:paddingHorizontal="14dp"
     android:layout_gravity="end"
     android:gravity="start"
-    android:textColor="@color/color_909090_666666"
+    android:textColor="@color/color_A7B2C4"
     android:layout_marginBottom="@dimen/margin_8"
     android:text="23"
-    android:textSize="@dimen/textSize14sp" />
+    android:textSize="@dimen/textSize12sp" />
