--- a/app/src/main/res/layout/item_search_result_league.xml
+++ b/app/src/main/res/layout/item_search_result_league.xml
@@ -1,47 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="4dp"
     android:orientation="vertical">
 
-    <View
-        android:id="@+id/view1"
-        android:layout_width="@dimen/margin_2"
-        android:layout_height="0dp"
-        android:layout_marginVertical="4dp"
-        android:background="@drawable/bg_search_title_left"
-        app:layout_constraintBottom_toBottomOf="@+id/tvLeagueTittle"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/tvLeagueTittle" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="28dp"
+        android:gravity="center_vertical"
+        android:background="@color/color_99FFFFFF">
 
-    <org.cxct.sportlottery.widget.highLightTextView.HighlightTextView
-        android:id="@+id/tvLeagueTittle"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/margin_16"
-        android:gravity="start"
-        android:text="Lorem ipsum UFC dolor sit amet,"
-        android:textColor="@color/color_BBBBBB_333333"
-        android:textSize="@dimen/margin_14"
-        android:textStyle="bold"
-        app:highlightColor="@color/color_317FFF_0760D4"
-        app:highlightRadius="0dp"
-        app:highlightText="UFC"
-        app:highlightTextColor="@color/color_FFFFFF"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <ImageView
+            android:id="@+id/view1"
+            android:layout_width="3dp"
+            android:layout_height="14dp"
+            android:background="@drawable/bg_blue_divide_ver" />
+
+        <org.cxct.sportlottery.widget.highLightTextView.HighlightTextView
+            android:id="@+id/tvLeagueTittle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/margin_16"
+            android:gravity="start"
+            android:text="Lorem ipsum UFC dolor sit amet,"
+            android:textColor="@color/color_535D76"
+            android:textSize="@dimen/margin_14"
+            app:highlightColor="@color/transparent"
+            app:highlightRadius="0dp"
+            app:highlightText="UFC"
+            app:highlightTextColor="@color/color_025BE8" />
+    </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvResultMatch"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/margin_16"
-        android:layout_marginTop="@dimen/margin_10"
-        android:layout_marginBottom="6dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvLeagueTittle" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_marginLeft="9dp" />
+</LinearLayout>
