--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -72,7 +72,6 @@
     <dimen name="odd_item_divide_all">6dp</dimen>
 
 
-
     <dimen name="recyclerview_item_dec_spec_sport_type">10dp</dimen>
     <dimen name="recyclerview_item_dec_spec_date">12dp</dimen>
     <dimen name="recyclerview_item_dec_spec_play_category">12dp</dimen>
@@ -128,5 +127,8 @@
 
     <dimen name="keyboard_radius">2dp</dimen>
     <dimen name="keyboard_height">108dp</dimen>
+    <dimen name="app_bar_height">180dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
+    <dimen name="text_margin">16dp</dimen>
 
 </resources>
