--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -437,6 +437,7 @@
     <color name="color_025BE8_025BE8">@color/color_025BE8</color>
     <color name="color_D35555_D35555">@color/color_D35555</color>
     <color name="color_FF9855_FF9855">@color/color_FF9855</color>
+    <color name="color_1D9F51_1D9F51">@color/color_1D9F51</color>
 
     <color name="color_141931_F9F9F9">@color/color_F9F9F9</color>
     <color name="color_DCB345_ECCD86">@color/color_ECCD86</color>
