--- a/app/src/main/res/drawable/bg_gradient_bet_info_title_v2.xml
+++ b/app/src/main/res/drawable/bg_gradient_bet_info_title_v2.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <!--  bottom left right 不希望顯示 stroke  -->
-    <item
-        android:bottom="-2dp"
-        android:left="-2dp"
-        android:right="-2dp">
+    <item>
+<!--        android:bottom="-2dp"-->
+<!--        android:left="-2dp"-->
+<!--        android:right="-2dp">-->
 
         <shape android:shape="rectangle">
             <corners
