--- a/app/src/main/res/layout/fragment_bet_receipt.xml
+++ b/app/src/main/res/layout/fragment_bet_receipt.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -12,105 +12,135 @@
     <View
         android:id="@+id/tool_bar"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/bet_list_top_padding_height"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_height="match_parent"
         android:background="@color/transparent_black_50" />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:background="@color/colorBackground"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:paddingBottom="@dimen/margin_8"
+        android:layout_height="match_parent"
+        android:gravity="bottom"
+        android:orientation="vertical"
+        tools:ignore="SpUsage, ContentDescription">
 
-        app:layout_constraintTop_toBottomOf="@+id/tool_bar">
-        <!-- TODO: Update blank fragment layout -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/bet_list_top_padding_height"
+        android:orientation="vertical">
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/cl_title"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/margin_48"
-            android:background="@color/color_191919_FCFCFC"
-            android:paddingStart="8dp"
-            android:paddingTop="5dp"
-            android:paddingEnd="5dp"
-            android:paddingBottom="5dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            android:layout_height="@dimen/bet_list_bar_height"
+            android:background="@drawable/bg_gradient_bet_info_title_v2"
+            android:clickable="true"
+            android:focusable="true"
+            tools:ignore="SpUsage">
 
             <ImageView
-                android:id="@+id/iv_receipt"
-                android:layout_width="@dimen/margin_28"
-                android:layout_height="@dimen/margin_28"
-                android:padding="@dimen/margin_8"
-                android:src="@drawable/ic_arrow_gray"
+                android:id="@+id/iv_arrow"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_marginEnd="14dp"
+                android:src="@drawable/ic_arrow_down_double"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageView
+                android:id="@+id/viewLeftLine"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="14dp"
+                android:src="@drawable/ic_detail_odd_title_line"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:layout_width="0dp"
+                android:id="@+id/tv_bet_list"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/margin_4"
+                android:layout_marginStart="6dp"
                 android:text="@string/bet_list_receipt"
-                android:textColor="@color/color_BBBBBB_333333"
+                android:textAllCaps="true"
+                android:textColor="@color/color_FFFFFF_414655"
                 android:textSize="@dimen/textSize14sp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@id/iv_receipt"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintStart_toEndOf="@+id/viewLeftLine"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:ignore="SpUsage" />
 
-            <ImageView
-                android:layout_width="@dimen/margin_12"
-                android:layout_height="@dimen/margin_12"
-                android:layout_marginRight="@dimen/margin_8"
-                android:src="@drawable/ic_bet_list_money"
+            <View
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:background="@drawable/bg_circle_317fff_0760d4"
+                app:layout_constraintBottom_toBottomOf="@id/tv_bet_list_count"
+                app:layout_constraintEnd_toEndOf="@id/tv_bet_list_count"
+                app:layout_constraintStart_toStartOf="@id/tv_bet_list_count"
+                app:layout_constraintTop_toTopOf="@id/tv_bet_list_count" />
+
+            <TextView
+                android:id="@+id/tv_bet_list_count"
+                android:layout_width="18dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="4dp"
+                android:gravity="center"
+                android:textColor="@color/color_FFFFFF_FFFFFF"
+                android:textSize="@dimen/textSize16sp"
+                android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintRight_toLeftOf="@id/tv_currency"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintStart_toEndOf="@+id/tv_bet_list"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="10" />
+
+            <TextView
+                android:id="@+id/tv_currency"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="@dimen/margin_2"
+                android:textColor="@color/color_FFFFFF_414655"
+                android:textSize="@dimen/textSize16sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/tv_balance"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="₱" />
 
             <TextView
                 android:id="@+id/tv_balance"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/margin_14"
-                android:textColor="@color/color_BBBBBB_333333"
-                android:textSize="@dimen/textSize14sp"
+                android:layout_marginEnd="@dimen/margin_10"
+                android:textColor="@color/color_FFFFFF_414655"
+                android:textSize="@dimen/textSize18sp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/iv_arrow"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="9,875,241.000" />
 
-            <TextView
-                android:id="@+id/tv_currency"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/margin_4"
-                android:textColor="@color/color_BBBBBB_333333"
-                android:textSize="@dimen/textSize14sp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@id/tv_balance"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:text="₱" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_bet_receipt"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:overScrollMode="never"
-            app:layout_constraintBottom_toTopOf="@+id/cl_total_info"
-            app:layout_constraintTop_toBottomOf="@+id/cl_title"
-            tools:listitem="@layout/item_match_receipt" />
+            android:background="@color/color_202541_FFFFFF"
+            android:layout_weight="1">
 
-<!--        <View-->
-<!--            android:id="@+id/shadow"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="16dp"-->
-<!--            android:background="@drawable/bg_gradient_bottom_sheet_shadow"-->
-<!--            app:layout_constraintBottom_toTopOf="@+id/cl_total_info" />-->
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_bet_receipt"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:overScrollMode="never"
+                tools:itemCount="2"
+                tools:listitem="@layout/item_match_receipt" />
 
+            <View
+                android:id="@+id/line_shadow"
+                android:layout_width="match_parent"
+                android:layout_height="4dp"
+                android:background="@drawable/bg_gradient_bottom_sheet_shadow"
+                app:layout_constraintBottom_toBottomOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/cl_total_info"
@@ -121,6 +151,7 @@
             android:paddingTop="13dp"
             android:paddingEnd="16dp"
             android:paddingBottom="13dp"
+            android:visibility="gone"
             app:layout_constraintBottom_toTopOf="@+id/tv_already_bet_complete"
             app:layout_constraintTop_toBottomOf="@+id/rv_bet_receipt">
 
@@ -197,53 +228,23 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <TextView
-            android:id="@+id/tv_already_bet_complete"
+        <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/color_EAF4FE"
-            android:gravity="center"
-            android:paddingTop="2dp"
-            android:paddingBottom="2dp"
-            android:text="@string/bet_succeeded"
-            android:textColor="@color/color_317FFF_0760D4"
-            android:textSize="@dimen/textSize13sp"
-            android:visibility="gone"
-            app:layout_constraintBottom_toTopOf="@+id/btn_complete" />
+            android:padding="@dimen/margin_14"
+            android:background="@drawable/bg_gradient_bet_total">
 
-        <View
-            android:id="@+id/view"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/margin_1"
-            android:background="@color/color_212121_ededed"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_already_bet_complete" />
+            <TextView
+                android:id="@+id/btn_complete"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/bet_button_height"
+                android:background="@drawable/button_radius_8_bet_button"
+                android:gravity="center"
+                android:text="@string/btn_sure"
+                android:textColor="@color/color_FFFFFF_FFFFFF"
+                android:textSize="@dimen/textSize16sp" />
+        </FrameLayout>
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:background="@color/color_191919_EEEFF0"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/view" />
-
-        <TextView
-            android:id="@+id/btn_complete"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/margin_8"
-            android:layout_marginRight="@dimen/margin_8"
-            android:layout_marginBottom="@dimen/margin_8"
-            android:layout_marginTop="@dimen/margin_8"
-            android:background="@drawable/button_radius_4_117ecd_1053af"
-            android:gravity="center"
-            android:paddingTop="14dp"
-            android:paddingBottom="14dp"
-            android:text="@string/complete"
-            android:textColor="@android:color/white"
-            android:textSize="@dimen/textSize14sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/view" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
+    </LinearLayout>
+</FrameLayout>
