--- a/app/src/main/res/layout/item_match_receipt.xml
+++ b/app/src/main/res/layout/item_match_receipt.xml
@@ -4,95 +4,131 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="org.cxct.sportlottery.ui.game.betList.receipt.BetReceiptDiffAdapter"
     android:layout_width="match_parent"
-    android:background="@color/color_141414_F3F4F5"
     android:layout_height="wrap_content"
-
     tools:ignore="SpUsage">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <View
+            android:id="@+id/top_space"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/margin_14" />
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:cardCornerRadius="@dimen/margin_8"
-            android:layout_marginTop="@dimen/margin_8"
-            android:layout_marginBottom="@dimen/margin_8"
-            android:layout_marginLeft="@dimen/margin_8"
-            android:layout_marginRight="@dimen/margin_8">
+            app:cardElevation="0dp"
+            android:layout_marginHorizontal="@dimen/margin_14"
+            android:layout_marginBottom="@dimen/margin_14">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/color_191919_FCFCFC">
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/margin_24"
-                    android:orientation="horizontal"
-                    android:gravity="center_vertical"
-                    android:id="@+id/layoutTitle"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:background="@drawable/bg_gradient_0066d1_0079fa">
-                    <ImageView
-                        android:layout_width="@dimen/margin_12"
-                        android:layout_height="@dimen/margin_12"
-                        android:gravity="center_vertical"
-                        android:src="@drawable/icon_recept"
-                        app:tint="@color/white"
-                        android:layout_marginStart="@dimen/margin_8"
-                        />
+                android:background="@drawable/bg_square_shape_8dp_blue_stroke_white_solid">
+<!--                <LinearLayout-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="@dimen/margin_24"-->
+<!--                    android:orientation="horizontal"-->
+<!--                    android:gravity="center_vertical"-->
+<!--                    android:id="@+id/layoutTitle"-->
+<!--                    app:layout_constraintTop_toTopOf="parent"-->
+<!--                    android:background="@drawable/bg_gradient_0066d1_0079fa">-->
+<!--                    <ImageView-->
+<!--                        android:layout_width="@dimen/margin_12"-->
+<!--                        android:layout_height="@dimen/margin_12"-->
+<!--                        android:gravity="center_vertical"-->
+<!--                        android:src="@drawable/icon_recept"-->
+<!--                        app:tint="@color/white"-->
+<!--                        android:layout_marginStart="@dimen/margin_8"-->
+<!--                        />-->
+<!--                    <TextView-->
+<!--                        android:layout_width="0dp"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:text="@string/bet_list_single"-->
+<!--                        android:layout_weight="1"-->
+<!--                        android:gravity="center_vertical"-->
+<!--                        android:textColor="@color/white"-->
+<!--                        android:textSize="@dimen/textSize12sp"-->
+<!--                        android:layout_marginStart="@dimen/margin_4"/>-->
+<!--                </LinearLayout>-->
 
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:text="@string/bet_list_single"
-                        android:layout_weight="1"
-                        android:gravity="center_vertical"
-                        android:textColor="@color/white"
-                        android:textSize="@dimen/textSize12sp"
-                        android:layout_marginStart="@dimen/margin_4"/>
-
-
-                </LinearLayout>
+                <TextView
+                    android:id="@+id/tv_bet_status_single"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="11dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/topContainer"
+                    android:textSize="@dimen/textSize12sp"
+                    android:visibility="visible"
+                    android:drawablePadding="6dp"
+                    tools:text="已确认"
+                    tools:textColor="@color/color_1D9F51_1D9F51"
+                    tools:drawableStart="@drawable/ic_bet_lock_tip"
+                    tools:drawableTint="@color/color_1D9F51_1D9F51"/>
 
                 <TextView
                     android:id="@+id/tv_match_type"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/color_BBBBBB_333333"
-                    android:textSize="@dimen/textSize13sp"
+                    android:textColor="@color/color_FFFFFF_414655"
+                    android:textSize="@dimen/textSize12sp"
                     android:layout_marginTop="10dp"
-                    android:layout_marginStart="@dimen/margin_12"
+                    android:layout_marginStart="@dimen/margin_10"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/tv_play_content"
+                    app:layout_constraintTop_toBottomOf="@+id/topContainer"
                     tools:text="让球" />
 
-                <!--playName + spread + @ + odds + (oddsType)-->
+                <LinearLayout
+                    android:id="@+id/topContainer"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/bg_shape_top_8dp_blue_stroke_no_bottom_stroke"
+                    android:paddingStart="10dp"
+                    android:paddingTop="8dp"
+                    android:paddingEnd="11dp"
+                    android:paddingBottom="6dp"
+                    app:layout_constraintTop_toTopOf="parent">
+
+                <!--playName + spread + @ + odds + (oddsType)--> <!--old-->
+                <!--playName + spread--> <!--new-->
                 <TextView
                     android:id="@+id/tv_play_content"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/color_BBBBBB_333333"
+                    android:layout_weight="1"
+                    android:layout_marginEnd="10dp"
+                    android:textColor="@color/color_FFFFFF_414655"
                     android:textSize="@dimen/textSize15sp"
-                    android:textStyle="bold"
-                    android:layout_marginTop="@dimen/margin_12"
-                    android:layout_marginStart="@dimen/margin_12"
-                    android:layout_marginEnd="@dimen/margin_12"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/layoutTitle"
-                    tools:text="日本奥运队 1.5/2 @ 0.89 (歐洲盤)" />
+                    tools:text="日本奥运队 1.5/2" />
+
+                    <TextView
+                        android:id="@+id/tv_odds"
+                        android:textSize="@dimen/textSize16sp"
+                        android:textColor="@color/color_025BE8_025BE8"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        tools:text="\@ 0.89"/>
+
+                </LinearLayout>
 
                 <TextView
                     android:id="@+id/tv_league"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/color_909090_666666"
-                    android:textSize="@dimen/textSize13sp"
-                    android:layout_marginTop="6dp"
+                    android:textColor="@color/color_6C7BA8_6C7BA8"
+                    android:textSize="@dimen/textSize12sp"
+                    android:layout_marginTop="2dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0"
-                    app:layout_constraintStart_toStartOf="@id/tv_play_content"
+                    app:layout_constraintStart_toStartOf="@id/tv_match_type"
                     app:layout_constraintTop_toBottomOf="@+id/tv_match_type"
                     tools:text="奥林匹克运动会2020男子足球(在日本)D组特别投注" />
 
@@ -101,10 +137,11 @@
                     android:id="@+id/tv_team_names"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/color_909090_666666"
-                    android:textSize="@dimen/textSize13sp"
+                    android:textColor="@color/color_6C7BA8_6C7BA8"
+                    android:textSize="@dimen/textSize12sp"
+                    android:layout_marginTop="2dp"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="@id/tv_play_content"
+                    app:layout_constraintStart_toStartOf="@id/tv_match_type"
                     app:layout_constraintTop_toBottomOf="@+id/tv_league"
                     app:layout_constraintHorizontal_bias="0"
                     app:layout_constraintHorizontal_chainStyle="packed"
@@ -112,10 +149,8 @@
 
                 <include
                     layout="@layout/view_match_receipt_bet"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginStart="@dimen/margin_12"
-                    android:layout_marginEnd="@dimen/margin_12"
-                    android:layout_marginBottom="@dimen/margin_16"
+                    android:layout_marginHorizontal="10dp"
+                    android:layout_marginBottom="9dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     app:layout_constraintStart_toStartOf="parent"
@@ -126,5 +161,7 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </androidx.cardview.widget.CardView>
+
+    </LinearLayout>
 
 </FrameLayout>
