修改:添加银行按钮

--- a/app/src/main/res/layout/fragment_withdraw.xml
+++ b/app/src/main/res/layout/fragment_withdraw.xml
@@ -190,6 +190,7 @@
                             android:background="@color/exo_white">
 
                             <TextView
+                                android:id="@+id/tv_add_bank"
                                 android:layout_width="wrap_content"
                                 android:layout_height="50dp"
                                 android:layout_gravity="center"
