--- a/app/src/main/res/layout/view_match_receipt_bet.xml
+++ b/app/src/main/res/layout/view_match_receipt_bet.xml
@@ -31,7 +31,7 @@
                 android:id="@+id/tv_winnable_amount_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/total_win_amount"
+                android:text="@string/bet_receipt_win_quota_with_sign"
                 android:textColor="@color/color_9BB3D9_535D76"
                 android:textSize="@dimen/textSize12sp"
                 android:textStyle="bold"
@@ -66,7 +66,7 @@
                 android:id="@+id/tv_bet_amount_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/total_capital"
+                android:text="@string/bet_receipt_bet_quota_with_sign"
                 android:textColor="@color/color_9BB3D9_535D76"
                 android:textSize="@dimen/textSize12sp"
                 android:textStyle="bold"
